--- a/lab2.html
+++ b/lab2.html
@@ -74,8 +74,7 @@
         <tr>
           <td align="right">TOUR_NAME:</td>
           <td>
-            <input id="txtTourName" name="txtTourName" onblur="checkName(this)" type="text" maxlength="50"
-              placeholder="" />
+            <input id="txtTourName" name="txtTourName" onblur="checkName(this)" type="text" maxlength="50" placeholder="" />
           </td>
           <td>
             <div id="divTourName"></div>
