--- a/lab4.html
+++ b/lab4.html
@@ -110,7 +110,7 @@
                 <tr>
                     <td class="commonLabel">THEATRE:</td>
                     <td colspan="2">
-                        <select id="optTheatreName" name="optTheatreName" class="commonInput" onblur="checkTheatre(this),activateScreen(),activateShowtime()">
+                        <select id="optTheatreName" name="optTheatreName" class="commonInput" onchange="checkTheatre(this)">
                             <option value="">Select Theatre</option>
                             <option value="THEATRE 1">THEATRE 1</option>
                             <option value="THEATRE 2">THEATRE 2</option>
@@ -126,7 +126,7 @@
                 <tr>
                     <td class="commonLabel">SCREEN:</td>
                     <td colspan="2">
-                        <select disabled id="optScreen" name="optScreen" class="commonInput" onblur="checkScreen()">
+                        <select disabled id="optScreen" name="optScreen" class="commonInput" onchange="checkScreen(this)">
                             <option value="">Select Screen</option>
                             <option value="SC001">SCREEN 1</option>
                             <option value="SC026">SCREEN 2</option>
@@ -135,17 +135,23 @@
                             <option value="SC005">SCREEN 5</option>
                         </select>
                     </td>
+                    <td>
+                        <div id="divScreen"></div>
+                    </td>
                 </tr>
                 <tr>
                     <td class="commonLabel">SHOWTIME:</td>
                     <td colspan="2">
-                        <select disabled id="optShowtime" name="optShowtime" class="commonInput" onblur="checkShowtime()">
+                        <select disabled id="optShowtime" name="optShowtime" class="commonInput" onchange="checkShowTime(this)">
                             <option value="">Select Showtime</option>
                             <option value="11am-1pm">11am-1pm</option>
                             <option value="3pm-5pm">3pm-5pm</option>
                             <option value="4pm-6pm">4pm-6pm</option>
                             <option value="7pm-9pm">7pm-9pm</option>
                         </select>
+                    </td>
+                    <td>
+                        <div id="divShowTime"></div>
                     </td>
                 </tr>
                 <tr>
@@ -187,7 +193,8 @@
 
     function checkTheatre(htmlObj) {
         var thtname = htmlObj.value;
-        if (thtname = "Select Theatre") {
+        console.log(thtname) // TODO: remove this line
+        if (thtname == "") {
             flagTheatre = false;
             document.getElementById("divTheatre").innerHTML = "Please select theatre.";
         }
@@ -195,6 +202,36 @@
             flagTheatre = true;
             document.getElementById("divTheatre").innerHTML = "<img src=tick.jpg>";
             document.getElementById("optTheatreName").className = "commonInput";
+            activateScreen();
+        }
+    }
+
+    function checkScreen(htmlObj) {
+        var scrName = htmlObj.value;
+        console.log(scrName);
+        if (scrName == "") {
+            flagScreen = false;
+            document.getElementById("divScreen").innerHTML = "Please select screen.";
+        }
+        else {
+            flagScreen = true;
+            document.getElementById("divScreen").innerHTML = "<img src=tick.jpg>";
+            document.getElementById("optScreen").className = "commonInput";
+            activateShowtime();
+        }
+    }
+
+    function checkShowTime(htmlObj) {
+        var showTime = htmlObj.value;
+        console.log(showTime);
+        if (showTime == "") {
+            flagShowtimes = false;
+            document.getElementById("divShowTime").innerHTML = "Please select show time.";
+        }
+        else {
+            flagShowtimes = true;
+            document.getElementById("divShowTime").innerHTML = "<img src=tick.jpg>";
+            document.getElementById("optShowTime").className = "commonInput";
         }
     }
 
@@ -255,6 +292,38 @@
                 flagEndDate = true;
                 document.getElementById("divEndDate").innerHTML = "<img src=tick.jpg>";
                 document.getElementById("endDate").className = "commonInput";
+            }
+        }
+    }
+
+    var userRow = "";
+    function checkAllInput() {
+        if (document.getElementById("optMovieName").value != "") {
+            if (document.getElementById("optTheatreName").value != "") {
+                if (document.getElementById("optScreen").value != "") {
+                    if (document.getElementById("optShowTime").value != "") {
+                        if (document.getElementById("startDate").value != "" && flagStartDate != false) {
+                            if (document.getElementById("endDate").value != "" && flagEndDate != false) {
+                                var headerContent = "";
+                                headerContent = "<table border=0><tr>";
+                                headerContent += "<td align=center valign=center class=headerCell> Sl.No.</td>";
+                                headerContent += "<td align=center valign=center class=headerCell> Movie Name</td>";
+                                headerContent += "<td align=center valign=center class=headerCell> Theatre Name</td>";
+                                headerContent += "<td align=center valign=center class=headerCell> Screen</td>";
+                                headerContent += "<td align=center valign=center class=headerCell> Showtime</td>";
+                                headerContent += "<td align=center valign=center class=headerCell> Start Date</td>";
+                                headerContent += "<td align=center valign=center class=headerCell> End Date</td>";
+                                headerContent += "</tr>";
+                                var movName = document.getElementById("optMovieName").value;
+                                var thtName = document.getElementById("optTheatreName").value;
+                                var scr = document.getElementById("optScreen").value;
+                                var shTime = document.getElementById("optShowTime").value;
+                                var startDate = document.getElementById("startDate").value;
+                                var endDate = document.getElementById("endDate").value;
+                            }
+                        }
+                    }
+                }
             }
         }
     }
